Added javascript unit testing
git-svn-id: https://svn.dbc.dk/repos/solr-indexer-cloud/trunk/worker@75573 b87a6194-a221-0410-ad6f-3b8ec35bba13